[package]
name = "pico_usb_serial"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-alloc = "0.5.0"
embedded-hal = "0.2.7"
fugit = "0.3.6"
heapless = "0.7.16"
nb = "1.0.0"
panic-halt = "0.2.0"
rp-pico = "0.7.0"
usb-device = "0.2.9"
usbd-hid = "0.6.1"
usbd-serial = "0.1.1"
